// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordConfirm /> rendering should render correctly 1`] = `
<div
  className="container content"
  id="password-confirm"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <div
        className="inner"
      >
        <h1>
          Reset your password
        </h1>
        <p>
          Please enter your new password below.
        </p>
        <div
          className="fieldset"
        >
          <div
            className="row password"
          >
            <label
              htmlFor="password"
            >
              Password
            </label>
            <input
              autoComplete="new-password"
              className="input "
              id="password"
              name="newPassword1"
              onChange={[Function]}
              pattern=".{6,}"
              placeholder="password"
              required={true}
              title="password must be a minimum of 6 characters"
              type="password"
              value=""
            />
            <div
              className=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <i
                className="eye"
                title="reveal password"
              />
            </div>
          </div>
          <div
            className="row password-confirm"
          >
            <label
              htmlFor="password-confirm"
            >
              Confirm password
            </label>
            <input
              autoComplete="new-password"
              className="input "
              id="password-confirm"
              name="newPassword2"
              onChange={[Function]}
              pattern=".{6,}"
              placeholder="confirm password"
              required={true}
              title="password must be a minimum of 6 characters"
              type="password"
              value=""
            />
            <div
              className=""
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <i
                className="eye"
                title="reveal password"
              />
            </div>
          </div>
        </div>
        <div
          className="row submit"
        >
          <input
            className="button full"
            type="submit"
            value="Change password"
          />
        </div>
        <div
          className="contact-us"
        >
          Please contact us if you have any trouble resetting your password.
        </div>
        <a
          className="link"
          href="/default/login"
          onClick={[Function]}
        >
          Go back to sign in
        </a>
      </div>
    </form>
    <div
      className="side-column contact"
    >
      <div
        className="inner"
      >
        
        <div
          className="row"
        >
          <span
            className="label"
          >
            Email
            :
          </span>
          <a
            className="link"
            href="mailto:support@openwisp.co"
          >
            support@openwisp.co
          </a>
        </div>
        <div
          className="row"
        >
          <span
            className="label"
          >
            Helpdesk
            :
          </span>
          <a
            className="link"
            href="tel:+789 948 564"
          >
            +789 948 564
          </a>
        </div>
        <div
          className="contact-links"
        >
          <a
            className="link "
            href="https://twitter.com/openwisp"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="twitter"
              className="contact-image "
              src="/assets/default/twitter.svg"
            />
          </a>
          <a
            className="link "
            href="https://facebook.com/openwisp"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="facebook"
              className="contact-image "
              src="/assets/default/facebook.svg"
            />
          </a>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`<PasswordConfirm /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
  id="password-confirm"
>
  <div
    className="inner"
  >
    <form
      className="main-column"
      onSubmit={[Function]}
    >
      <div
        className="inner"
      >
        <h1>
          PWD_CONFIRM_H
        </h1>
        <p>
          PWD_CONFIRM_ADD_TXT
        </p>
        <div
          className="fieldset"
        >
          <div
            className="row password"
          >
            <label
              htmlFor="password"
            >
              PWD_LBL
            </label>
            <input
              autoComplete="new-password"
              className="input "
              id="password"
              name="newPassword1"
              onChange={[Function]}
              pattern=".{6,}"
              placeholder="PWD_PHOLD"
              required={true}
              title="PWD_PTRN_DESC"
              type="password"
              value=""
            />
            <PasswordToggleIcon
              hidePassword={true}
              inputRef={
                Object {
                  "current": null,
                }
              }
              isVisible={false}
              parentClassName=""
              secondInputRef={
                Object {
                  "current": null,
                }
              }
              toggler={[Function]}
            />
          </div>
          <div
            className="row password-confirm"
          >
            <label
              htmlFor="password-confirm"
            >
              CONFIRM_PWD_LBL
            </label>
            <input
              autoComplete="new-password"
              className="input "
              id="password-confirm"
              name="newPassword2"
              onChange={[Function]}
              pattern=".{6,}"
              placeholder="CONFIRM_PWD_PHOLD"
              required={true}
              title="PWD_PTRN_DESC"
              type="password"
              value=""
            />
            <PasswordToggleIcon
              hidePassword={true}
              inputRef={
                Object {
                  "current": null,
                }
              }
              isVisible={false}
              parentClassName=""
              secondInputRef={
                Object {
                  "current": null,
                }
              }
              toggler={[Function]}
            />
          </div>
        </div>
        <div
          className="row submit"
        >
          <input
            className="button full"
            type="submit"
            value="PWD_CONFIRM"
          />
        </div>
        <div
          className="contact-us"
        >
          PWD_RESET_CNTC_TXT
        </div>
        <Link
          className="link"
          to="/default/login"
        >
          LOGIN_PG_LNK
        </Link>
      </div>
    </form>
    <Connect(Contact) />
  </div>
</div>
`;
